--- a/sections/hero.html
+++ b/sections/hero.html
@@ -1,6 +1,6 @@
-<header>
+<header class="mt-16">
     <!--SLIDER CONTAINER-->
-    <div id="sliderContainer" class="max-w-large mx-auto px-2 sm:px-10 md:px-2 lg:px-10 xxl:px-0">
+    <div id="sliderContainer" class="max-w-large mx-auto px-2 sm:px-10 md:px-2 lg:px-10 xxl:px-0 ">
    
     
 
@@ -15,7 +15,7 @@
                 <p>Marka GiardDesign to wieloletnie doświadczenie i wysoka estetyka realizacji. Oferujemy kompleksowy zakres usług z indywidualnym podejściem do każdego projektu.</p>
                 <div class="
                 flex 
-                flex-col lg:flex-wrap
+               flex-wrap
                 justify-center
                 items-center
                  gap-4 xl:gap-9 
@@ -27,7 +27,7 @@
                      pt-2 xl:pt-3 
                      pb-2 xl:pb-4 
                      rounded-full
-                     w-full sm:w-3/4"><a href="#">Skontaktuj się z nami</a></button>
+                     w-full sm:w-3/4 xl:w-auto"><a href="#">Skontaktuj się z nami</a></button>
                     <button class="
                     bg-transparent 
                     text-green 
@@ -37,7 +37,7 @@
                     pt-2 xl:pt-3 
                     pb-2 xl:pb-4 
                      rounded-full
-                     w-full sm:w-3/4"><a href="#" class="flex justify-center items-center gap-2">Zobacz nasze realizacje <img src="dist/img/arrow-down.svg" alt=""></a></button>
+                     w-full sm:w-3/4 xl:w-auto"><a href="#" class="flex justify-center items-center gap-2">Zobacz nasze realizacje <img src="dist/img/arrow-down.svg" alt=""></a></button>
                 </div>
             </div>
             <div class="w-full md:w-1/2 relative">
@@ -75,7 +75,7 @@
                 <p>Marka GiardDesign to wieloletnie doświadczenie i wysoka estetyka realizacji. Oferujemy kompleksowy zakres usług z indywidualnym podejściem do każdego projektu.</p>
                 <div class="
                 flex 
-                flex-col lg:flex-wrap
+                flex-wrap
                 justify-center
                 items-center
                  gap-4 xl:gap-9 
@@ -87,7 +87,7 @@
                      pt-2 xl:pt-3 
                      pb-2 xl:pb-4 
                      rounded-full
-                     w-full sm:w-3/4"><a href="#">Skontaktuj się z nami</a></button>
+                     w-full sm:w-3/4 xl:w-auto"><a href="#">Skontaktuj się z nami</a></button>
                     <button class="
                     bg-transparent 
                     text-green 
@@ -97,7 +97,7 @@
                     pt-2 xl:pt-3 
                     pb-2 xl:pb-4 
                      rounded-full
-                     w-full sm:w-3/4"><a href="#" class="flex justify-center items-center gap-2">Zobacz nasze realizacje <img src="dist/img/arrow-down.svg" alt=""></a></button>
+                     w-full sm:w-3/4 xl:w-auto"><a href="#" class="flex justify-center items-center gap-2">Zobacz nasze realizacje <img src="dist/img/arrow-down.svg" alt=""></a></button>
                 </div>
             </div>
             <div class="w-full md:w-1/2 relative">
@@ -137,7 +137,7 @@
                 <p>Marka GiardDesign to wieloletnie doświadczenie i wysoka estetyka realizacji. Oferujemy kompleksowy zakres usług z indywidualnym podejściem do każdego projektu.</p>
                 <div class="
                 flex 
-                flex-col lg:flex-wrap
+                flex-wrap
                 justify-center
                 items-center
                  gap-4 xl:gap-9 
@@ -149,7 +149,7 @@
                      pt-2 xl:pt-3 
                      pb-2 xl:pb-4 
                      rounded-full
-                     w-full sm:w-3/4"><a href="#">Skontaktuj się z nami</a></button>
+                     w-full sm:w-3/4 xl:w-auto"><a href="#">Skontaktuj się z nami</a></button>
                     <button class="
                     bg-transparent 
                     text-green 
@@ -159,7 +159,7 @@
                     pt-2 xl:pt-3 
                     pb-2 xl:pb-4 
                      rounded-full
-                     w-full sm:w-3/4"><a href="#" class="flex justify-center items-center gap-2">Zobacz nasze realizacje <img src="dist/img/arrow-down.svg" alt=""></a></button>
+                     w-full sm:w-3/4 xl:w-auto" ><a href="#" class="flex justify-center items-center gap-2">Zobacz nasze realizacje <img src="dist/img/arrow-down.svg" alt=""></a></button>
                 </div>
             </div>
             <div class="w-full md:w-1/2 relative">
