--- a/index.html
+++ b/index.html
@@ -412,6 +412,38 @@
         </div>
     </div>
 </section>
+  <section id="instagram" class="bg-grey py-14">
+    <!-- <div class="bg-secondary-color max-w-4xl mx-auto pt-30 pb-24 px-0 sm:px-8 lg:px-0"> -->
+    <div class="
+    bg-green
+     text-white 
+     max-w-small
+     mx-auto 
+     flex flex-col md:flex-row 
+    justify-between 
+    items-center
+     px-14 md:px-28 
+    py-14 md:py-30
+     md:w-4/5
+     gap-9 md:gap-0
+     ">
+        <div class="flex flex-col">
+            <h2 class="text-4xl">Zostańmy w kontakcie!</h2>
+            <h2 class="text-4xl">Znajdziesz nas na <span class="font-semibold italic">Instagramie.</span></h2>
+        </div>
+        <div class="
+        flex 
+        justify-start
+        flex-col 
+        items-start 
+        md:w-1/5 
+        gap-6">
+           <p class="text-base"> Śledź nasze<br> najnowsze realizacje!</p>
+           <button class="text-green bg-grey  focus:outline-none hover:bg-gray-100 focus:ring-4 focus:ring-gray-200 font-medium rounded-full text-base px-5 py-2.5 mr-2 mb-2">Instagram</button>
+
+        </div>
+    </div>
+</section>
   <footer class="bg-black text-white">
     <div class="
     flex 
