finish realisation card

--- a/sections/realisations.html
+++ b/sections/realisations.html
@@ -2,7 +2,7 @@
     <div>
 
 
-        <div class="max-w-large mx-auto pt-32 pb-24 px-0 sm:px-8 lg:px-0 ">
+        <div class="max-w-large mx-auto pt-32 pb-24 px-4 sm:px-8 lg:px-8">
             <div class="
             max-w-small 
             mx-auto 
@@ -15,20 +15,20 @@
 
 
 
-            <div>
+            
                 <div class=" flex flex-col md:flex-row justify-center items-center bg-green gap-2 lg:gap-8 xl:gap-16">
-                    <div class="w-full md:w-1/2 relative">
+                    <div class="w-full md:w-1/2 relative md:p-4 lg:p-0">
 
                         <img src="dist/img/realisations.jpg" alt="Slider Image"
-                            class="max-h-[350px] md:max-h-[400px] lg:max-h-[460px] xl:max-h-[620px] w-full object-fill">
+                            class="max-h-[350px] md:max-h-[660px] lg:max-h-[620px] xl:max-h-[720px] w-full object-fill">
 
 
                     </div>
-                    <div class="w-full md:w-3/5 px-4 xl:px-20 py-4 md:py-0 text-white">
+                    <div class="w-full md:w-1/2 px-8 xl:px-20 py-10 lg:py-0 text-white">
                         <span class=" text-xs">O firmie</span>
-                        <h2 class=" text-3xl sm:text-5xl font-medium">Towrzymy <br>z <span class="italic">pasją</span>
+                        <h2 class=" text-3xl lg:text-5xl font-medium mb-4 xl:mb-10 mt-4">Tworzymy <br>z <span class="italic">pasją</span>
                         </h2>
-                        <p>Każdy projekt to nowe wyzwanie. Dlatego nasz zespół tworzą wykwalifikowani projektanci oraz
+                        <p class="text-base">Każdy projekt to nowe wyzwanie. Dlatego nasz zespół tworzą wykwalifikowani projektanci oraz
                             architekci, których zadaniem jest rozpoznanie i realizacja potrzeb każdego Klienta. Nasza
                             specjalizacja to przestrzenie nowoczesne, które charakteryzuje minimalizm, geometria i
                             elegancka
@@ -36,10 +36,10 @@
                         <div class="
                         flex 
                        flex-wrap
-                        justify-center
+                        justify-start
                         items-center
                          gap-4 xl:gap-9 
-                         mt-6 lg:mt-16">
+                         mt-6 lg:mt-10 xl:mt-16">
                             <button class="
                             bg-green
                              text-white 
@@ -50,13 +50,13 @@
                              pb-2 xl:pb-4 
                              rounded-full
                              w-full sm:w-3/4 xl:w-auto"><a href="#" class="flex justify-center items-center">Poznaj nas
-                                    bliżej <img src="../../dist/img/arrow-right.svg" class="ml-2"></a></button>
+                                    bliżej <img src="../../dist/img/arrow-right-white.svg" class="ml-2"></a></button>
 
                         </div>
                     </div>
 
                 </div>
-            </div>
+            
         </div>
 
 
