--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
         <div class="max-w-large mx-auto relative">
             <button id="masonryBtn">test</button>
             <div id="grid" class="mx-auto">
-                <div class="grid-item mb-6"><img src="../../dist/img/masonry1.jpg" alt=""></div>
+                <div class="grid-item mb-6"><img src="../../dist/img/masonry1.jpg" alt="" style="cursor: zoom-in;"></div>
                 <div class="grid-item mb-6"><img src="../../dist/img/masonry2.jpg" alt=""></div>
                 <div class="grid-item mb-6"><img src="../../dist/img/masonry1.jpg" alt=""></div>
                 <div class="grid-item mb-6"><img src="../../dist/img/masonry2.jpg" alt=""></div>
@@ -517,7 +517,16 @@
             </div>
         </div>
 
-
+        <div id="modal" class="hidden fixed inset-0 flex justify-center items-center bg-black bg-opacity-50">
+            <div class="bg-white p-4 max-w-3xl">
+                <button id="closeModal" class="absolute top-2 right-2 text-gray-500 hover:text-gray-700 focus:outline-none">
+                    <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path strokeLinecap="round" strokeLinejoin="round" strokeWidth="2" d="M6 18L18 6M6 6l12 12"></path>
+                    </svg>
+                </button>
+                <img id="modalImage" src="" alt="" class="w-full max-h-[80vh] object-contain mx-auto">
+            </div>
+        </div>
 
 
 
