--- a/sections/instagram.html
+++ b/sections/instagram.html
@@ -6,7 +6,7 @@
         </div>
         <div class="flex justify-center xl:justify-start flex-col items-center xl:items-start md:w-1/5 gap-6 text-center md:text-left">
            <p class="text-base font-extralight"> Śledź nasze<br> najnowsze realizacje!</p>
-           <button type="button" class=" text-green bg-grey font-normal rounded-full text-base px-6 py-3 hover:bg-grey-dark duration-150"><a href="https://www.instagram.com/" target="_blank">Instagram</a></button>
+           <button type="button" class=" text-green bg-grey font-normal rounded-full text-base px-6 py-3 hover:bg-grey-dark duration-150"><a href="https://instagram.com" target="_blank">Instagram</a></button>
         </div>
     </div>
 </section>
