add animations tosection offer and finish it

--- a/sections/offer.html
+++ b/sections/offer.html
@@ -23,7 +23,7 @@
     gap-8 xl:gap-16 
     mx-16 md:mx-0 lg:mx-10 xl:mx-20">
             <!--CARD-->
-            <div class="
+            <div id="cardLeft" class="
         bg-white 
         rounded-3xl 
         px-10
@@ -38,6 +38,7 @@
         duration-1000 
         ease-out
         w-auto md:w-45 lg:w-auto
+       
         ">
                 <img src="dist/img/pencil.svg" alt="" class="mb-8">
                 <div class="flex flex-col items-center lg:items-start mb-10">
@@ -60,7 +61,7 @@
 
             </div>
             <!--CARD-->
-            <div class="
+            <div id="cardCenter" class="
        bg-white 
        rounded-3xl 
        px-10
@@ -95,7 +96,7 @@
 
 
             </div><!--CARD-->
-            <div class="
+            <div id="cardRight" class="
        bg-white 
        rounded-3xl 
        px-10
