--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ pb-2 xl:pb-4 w-full sm:w-3/4 xl:w-auto hover:bg-green-dark duration-150"><a href
     gap-8 xl:gap-16 
     mx-16 md:mx-0 lg:mx-10 xl:mx-20">
             <!--CARD-->
-            <div class="
+            <div id="cardLeft" class="
         bg-white 
         rounded-3xl 
         px-10
@@ -212,6 +212,7 @@ pb-2 xl:pb-4 w-full sm:w-3/4 xl:w-auto hover:bg-green-dark duration-150"><a href
         duration-1000 
         ease-out
         w-auto md:w-45 lg:w-auto
+       
         ">
                 <img src="dist/img/pencil.svg" alt="" class="mb-8">
                 <div class="flex flex-col items-center lg:items-start mb-10">
@@ -234,7 +235,7 @@ pb-2 xl:pb-4 w-full sm:w-3/4 xl:w-auto hover:bg-green-dark duration-150"><a href
 
             </div>
             <!--CARD-->
-            <div class="
+            <div id="cardCenter" class="
        bg-white 
        rounded-3xl 
        px-10
@@ -269,7 +270,7 @@ pb-2 xl:pb-4 w-full sm:w-3/4 xl:w-auto hover:bg-green-dark duration-150"><a href
 
 
             </div><!--CARD-->
-            <div class="
+            <div id="cardRight" class="
        bg-white 
        rounded-3xl 
        px-10
