--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GiardDesign</title>
     <link rel="stylesheet" href="dist/css/main.min.css">
     <link rel="stylesheet" href="dist/css/output.css">
-    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+    <link rel="apple-touch-icon" sizes="180x180" href="dist/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="dist/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="dist/favicon/favicon-16x16.png">
+<link rel="manifest" href="dist/favicon/site.webmanifest">
     
     
 </head>
