--- a/sections/hero.html
+++ b/sections/hero.html
@@ -18,7 +18,7 @@ pb-2 xl:pb-4 w-full sm:w-3/4 xl:w-auto hover:bg-green-dark duration-150"><a href
                     <button type="button" class="bg-transparent text-green border  border-green px-3 xl:px-6 pt-2 xl:pt-3 pb-2 xl:pb-4 rounded-full w-full sm:w-3/4 xl:w-auto hover:shadow-2xl duration-150"><a href="#realizacje" class="flex justify-center items-center gap-2">Zobacz nasze realizacje <img src="dist/img/icons/arrow-down.svg" alt=""></a></button>
                 </div>
             </div>
-            <div class="w-full md:w-1/2 relative">
+            <div class="w-full md:w-1/2 ml:auto relative">
                 <img src="dist/img/slider/slide1.webp" alt="ogród angielski widziany z lotu ptaka" loading="lazy"
                     class="max-h-[350px] md:max-h-[400px] lg:max-h-[460px] xl:max-h-[620px] w-full object-fill">
 
