--- a/sections/realisations.html
+++ b/sections/realisations.html
@@ -1,5 +1,5 @@
 <section id="realizacje" class="bg-beige relative">
-    <div>
+    <div class="">
         <div class="max-w-large mx-auto pt-32 pb-24 px-4 sm:px-8 lg:px-8">
             <div class="max-w-small mx-auto space-y-3 px-8 md:px-16 xl:px-0 mb-24">
                 <span class="text-green text-xs">Realizacje</span>
